--- a/index.html
+++ b/index.html
@@ -6,37 +6,44 @@
         <title>responsive-site</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <header>
-            
+            <div class="back-image">
+
+            </div>
         </header>
         <main>
-            <h2></h2>
+            <h2>テキスト</h2>
             <div class="contents">
                 <div class="item-box">
-                    <div class="title"></div>
-                    <div class="item"></div>
+                    <h3 class="title">タイトル</h3>
+                    <div class="item">
+                        <p>テキスト</p>
+                    </div>
                 </div>
-            </div>
-            <div class="contents">
                 <div class="item-box">
-                    <div class="title"></div>
-                    <div class="item"></div>
+                    <h3 class="title">タイトル</h3>
+                    <div class="item">
+                        <p>テキスト</p>
+                    </div>
                 </div>
-            </div>
-            <div class="contents">
                 <div class="item-box">
-                    <div class="title"></div>
-                    <div class="item"></div>
+                    <h3 class="title">タイトル</h3>
+                    <div class="item">
+                        <p>テキスト</p>
+                    </div>
                 </div>
             </div>
         </main>
         <footer>
             <div class="footer-content">
-                <h3></h3>
-                <div class="button"></div>
+                <h3>テキスト</h3>
+                <div class="button">ボタン</div>
             </div>
+            <small>&copy; Hanako Kirameki, All Rights Reserved.</small>
         </footer>
     </body>
 </html>
